# proj.js

./: .gitignore  .gitmodules  .mocharc.cjs  .npmignore  CHANGELOG.md  README.md  conanfile.py  conanfile.txt  eslint.config.mjs  meson.build  meson.options  meson_options.txt  package-lock.json  package.json  quickstart.cc  run.cjs  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  lock.yml  publish.yml  run.yml  swig.yml  test-package.yml
hadron/: clang-win32.ini  clang-win32.profile  emscripten.profile
lib/: capi-iterators.cjs  capi.d.mts  index.d.mts  light.d.mts  native.cjs  native.d.cts  native.mjs  wasm.d.mts  wasm.mjs
native/: capi.cjs  capi.mjs  index.cjs  index.d.cts  index.mjs  light.mjs
scripts/: proj-wasm-split.js  publish-packages.mjs
src/: capi.i  common.i  coordinatesystem.i  crs.i  datum.i  factory.i  function.i  gen_splitting_profile.js  io.i  metadata.i  nn.i  operation.i  optional.i  proj-wasm-split.js  proj.i  proj.js.i  proj_capi.i  proj_light.i  split-quickstart.js  splitting.i  std_list.i  std_set.i  util.i
test/: .mocharc.cjs  .mocharc.json  async.ts  integration.test.ts  napi-leaks-suppression.txt  native.async.test.ts  native.js.test.js  package.json  sync.ts  tsconfig.json  tsconfig.standalone.json  wasm.async.test.ts  wasm.js.test.js  wasm.node_js.proj_db.ts  wasm.sync.test.ts  webpack.config.js
test/browser/: README.md  index.html  index.js  index.ts  karma.conf.cjs  quickstart.test.ts  run-mocha-sync.ts  run-mocha.ts  wasm.browser.proj_db.ts  webpack.config.js
test/integration/: .gitignore  README.md  browser-vanilla-js.karma.cjs
test/integration/browser-react-ts/src/: index.tsx
test/integration/browser-rollup-esm/: index.js  test.js
test/integration/browser-vanilla-js/: README.md  index.html  index.js  package.json  rollup.config.cjs
test/integration/browser-vite-esm/src/: main.js
test/integration/browser-vite-ts/src/: main.ts
test/integration/browser-webpack-esm/: index.js  webpack.config.cjs
test/integration/browser-webpack-ts-cjs/: index.ts
test/integration/browser-webpack-ts-esm/: index.html  index.ts  tsconfig.json  webpack.config.cjs
test/integration/node-esm/: index.mjs
test/integration/node-native-sync/: index.mjs  package.json
test/integration/node-ts-esm/: index.ts
test/node/: native.js.test.js  native.ts.test.ts  quickstart.wasm.test.ts  wasm.js.test.js  wasm.node_js.proj_db.ts
test/shared/: capi.test.ts  chai-workaround.ts  coordinateoperation.test.ts  crs.test.ts  cs.test.ts  datum.test.ts  metadata.test.ts  quickstart-capi.d.ts  quickstart-capi.debug.js  quickstart-capi.mjs  quickstart-capi.test.ts  quickstart.d.ts  quickstart.debug.js  quickstart.mjs  quickstart.test.ts  quickstart.ts  quickstart_capi.mjs  quickstart_light.mjs  timing-capi.ts  timing.ts
wasm/: capi.mjs  emnapi.mjs  index-node.mjs  index.mjs  light.mjs
